--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,17 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps =
-    moononournation/GFX Library for Arduino@^1.4.7
-    SimpleStack = https://github.com/shah253kt/SimpleStack/archive/refs/tags/1.1.2.zip
+lib_deps = 
+	moononournation/GFX Library for Arduino@^1.4.7
+	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
